# flutter-video-plugin

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
lib/: main.dart
src/: audio.rs  lib.rs  main.rs  player.rs  plugin.rs  types.rs  video.rs  video_player.rs
