[package]
name = "flutter-video-plugin"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
flutter-engine = { path = "../flutter-rs/flutter-engine" } # git = "https://github.com/dvc94ch/flutter-rs", branch = "texture-registry" }
flutter-plugins = { path = "../flutter-rs/flutter-plugins" } #git = "https://github.com/dvc94ch/flutter-rs", branch = "texture-registry" }
flutter-winit = { path = "../flutter-rs/flutter-winit" } #git = "https://github.com/dvc94ch/flutter-rs", branch = "texture-registry" }
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
image = "0.22.4"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
async-std = "1.4.0"
